[gd_scene load_steps=8 format=3 uid="uid://wj7w6bbqbssk"]

[ext_resource type="Script" uid="uid://jdhheslaqcqn" path="res://Scripts/UI/sound_manager.gd" id="1_6etvu"]
[ext_resource type="AudioStream" uid="uid://b8odjab85hnlc" path="res://Assets/UI/MainMenu/ui_button_simple_click_01.wav" id="1_td85n"]
[ext_resource type="AudioStream" uid="uid://be0r6y3kyb15f" path="res://Assets/UI/MainMenu/Main_Menu.mp3" id="2_l3k87"]
[ext_resource type="AudioStream" uid="uid://che1tn3wmffu6" path="res://Assets/UI/MainMenu/small_box_open_02.wav" id="3_lx3gh"]
[ext_resource type="AudioStream" uid="uid://hdbg2q6j70h1" path="res://Assets/sound effects/UI/SUCCESS CHIME Bells Sparkle Tune Short 05.wav" id="5_ttmsj"]
[ext_resource type="AudioStream" uid="uid://dsqf5ey0g2to2" path="res://Assets/UI/MainMenu/fantastic.wav" id="6_x7tiq"]
[ext_resource type="AudioStream" uid="uid://clqwyy2ic36s7" path="res://Assets/music/overworld.ogg" id="7_pl4b2"]

[node name="Node" type="Node"]
script = ExtResource("1_6etvu")

[node name="UI button" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_td85n")
volume_db = -8.588
pitch_scale = 0.78
bus = &"SFX"

[node name="Main_Menu" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_l3k87")
volume_db = -50.0
bus = &"Music"
parameters/looping = true

[node name="SignCreak" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_lx3gh")
volume_db = -10.496
pitch_scale = 1.2
bus = &"SFX"

[node name="PlayChime" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_ttmsj")
volume_db = -15.673
pitch_scale = 0.86
bus = &"SFX"

[node name="player" type="Node" parent="."]

[node name="fantastic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_x7tiq")
bus = &"Music"

[node name="Overworld" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_pl4b2")
volume_db = -8.0
bus = &"Music"
